@@ -4,7 +4,7 @@ EFENCE=
 INCLUDES = -I$(top_srcdir)/gconf -I$(includedir)  $(ORBIT_CFLAGS) $(GLIB_CFLAGS) \
 	 -DG_LOG_DOMAIN=\"GConf-Tests\"
 
-noinst_PROGRAMS=testgconf testlisteners testschemas testchangeset
+noinst_PROGRAMS=testgconf testlisteners testschemas testchangeset testencode
 
 testgconf_SOURCES=testgconf.c
 
@@ -21,3 +21,7 @@ testschemas_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la
 testchangeset_SOURCES=testchangeset.c
 
 testchangeset_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la  $(EFENCE)
+
+testencode_SOURCES=testencode.c
+
+testencode_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la  $(EFENCE)
