@@ -1,3 +1,12 @@
+1999-11-17  Havoc Pennington  <hp@pobox.com>
+
+	* tests/testencode.c: new test for string quoting
+
+	* gconf/gconf-internals.c (gconf_unquote_string_inplace): new
+	function unquotes a string
+	(gconf_quote_string): quotes a string
+	(gconf_unquote_string): unquotes a const string
+
 1999-11-16  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-schema.c (gconf_schema_copy): copy locale, and
